--- a/Site.Master
+++ b/Site.Master
@@ -51,7 +51,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Productos</a></li>
-                        <li><a runat="server" href="~/About">Carrito</a></li>
+                        <li><a runat="server" href="~/Carrito" id="cartCount">Carrito</a></li>
                         <li><a runat="server" href="~/Login">Login</a></li>
                     </ul>
                 </div>
