--- a/Site.Master
+++ b/Site.Master
@@ -52,9 +52,10 @@
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Productos</a></li>
                         <li><a runat="server" href="~/Carrito" id="cartCount">Carrito</a></li>
-                        <li><a runat="server" href="~/Login">Login</a></li>
+                        <li><asp:LoginStatus ID="LoginStatus2" runat="server" /></li>
                     </ul>
                 </div>
+                
             </div>
         </div>
         <div class="container body-content">
