--- a/Account/Default/Index.css
+++ b/Account/Default/Index.css
@@ -81,7 +81,7 @@ label {
     text-align: center;
 }
 
-input {
+.inputClass {
     background: transparent;
     font-size: 20px;
     height: 25px;
@@ -94,7 +94,7 @@ input {
     margin-left: 8%;
 }
 
-#submit {
+.submit {
     color: black;
     font-size: 20px;
     font-weight: 600;
