--- a/Site.Master
+++ b/Site.Master
@@ -50,8 +50,24 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+                        
+                        <%if (Session["admin"] != null)
+                            { %>
+                        <% if (Session["admin"].ToString().Equals("0"))
+                            { %>
                         <li><a runat="server" href="~/">Productos</a></li>
                         <li><a runat="server" href="~/Carrito" id="cartCount">Carrito</a></li>
+                        <%}
+                            else
+                            { %>
+                        <li><a runat="server" href="~/AdministrarProductos" id="admnInv" visible="True">Admin Productos</a></li>
+                        <%}
+                            }
+                            else
+                            { %>
+                        <li><a runat="server" href="~/">Productos</a></li>
+                        <li><a runat="server" href="~/Carrito" id="A1">Carrito</a></li>
+                        <%} %>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled" ID="LoginStatus1">
                         <AnonymousTemplate>
