--- a/Site.Master
+++ b/Site.Master
@@ -61,6 +61,7 @@
                             else
                             { %>
                         <li><a runat="server" href="~/AdministrarProductos" id="admnInv" visible="True">Admin Productos</a></li>
+                        <li><a runat="server" href="~/AdministrarMarcaProveedor" id="admnPM" visible="True">Admin Proveedor/Marca</a></li>
                         <%}
                             }
                             else
