--- a/Site.Master
+++ b/Site.Master
@@ -60,6 +60,7 @@
                         <%}
                             else
                             { %>
+                        <li><a runat="server" href="~/Admin/Ferreterias/AdministrarFerreterias" id="admnF" visible="True">Admin Ferreterias</a></li>
                         <li><a runat="server" href="~/AdministrarProductos" id="admnInv" visible="True">Admin Productos</a></li>
                         <li><a runat="server" href="~/AdministrarMarcaProveedor" id="admnPM" visible="True">Admin Proveedor/Marca</a></li>
                         <%}
