--- a/Site.Master
+++ b/Site.Master
@@ -63,6 +63,7 @@
                         <li><a runat="server" href="~/Admin/Ferreterias/AdministrarFerreterias" id="admnF" visible="True">Admin Ferreterias</a></li>
                         <li><a runat="server" href="~/AdministrarProductos" id="admnInv" visible="True">Admin Productos</a></li>
                         <li><a runat="server" href="~/AdministrarMarcaProveedor" id="admnPM" visible="True">Admin Proveedor/Marca</a></li>
+                        <li><a runat="server" href="~/AdministrarEmpleados" id="admnE" visible="True">Admin Empleados</a></li>
                         <%}
                             }
                             else
