--- a/Site.Master
+++ b/Site.Master
@@ -60,12 +60,13 @@
                         <%}
                             else
                             { %>
-                        <li><a runat="server" href="~/Admin/Ferreterias/AdministrarFerreterias" id="admnF" visible="True">Admin Ferreterias</a></li>
-                        <li><a runat="server" href="~/Admin/Productos/AdministrarProductos" id="admnInv" visible="True">Admin Productos</a></li>
-                        <li><a runat="server" href="~/Admin/Productos/AdministrarMarcaProveedor" id="admnPM" visible="True">Admin Proveedor/Marca</a></li>
-                        <li><a runat="server" href="~/Admin/Empleados/AdministrarEmpleados" id="admnE" visible="True">Admin Empleados</a></li>
-                        <li><a runat="server" href="~/Admin/Clientes/AdministrarClientes" id="admnC" visible="True">Admin Clientes</a></li>
-                        <li><a runat="server" href="~/Admin/Vehiculos/AdminCarros" id="admnV" visible="True">Admin Vehiculos</a></li>
+                        <li><a runat="server" href="~/Admin/Ferreterias/AdministrarFerreterias" id="admnF" visible="True">Ferreterias</a></li>
+                        <li><a runat="server" href="~/Admin/Productos/AdministrarProductos" id="admnInv" visible="True">Productos</a></li>
+                        <li><a runat="server" href="~/Admin/Productos/AdministrarMarcaProveedor" id="admnPM" visible="True">Proveedores/Marca</a></li>
+                        <li><a runat="server" href="~/Admin/Empleados/AdministrarEmpleados" id="admnE" visible="True">Empleados</a></li>
+                        <li><a runat="server" href="~/Admin/Clientes/AdministrarClientes" id="admnC" visible="True">Clientes</a></li>
+                        <li><a runat="server" href="~/Admin/Vehiculos/AdminCarros" id="admnV" visible="True">Vehiculos</a></li>
+                        <li><a runat="server" href="~/Admin/Empleados/AdministrarAmonestaciones" id="a2" visible="True">Amonestaciones</a></li>
                         <%}
                             }
                             else
